# Camera

./: .gitignore  GUI.ui  camera.py  camera_app.py  design.py  main.py  processing.py  pyproject.toml  settings.py  tools.py
